--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,14 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.content {
+  background-color: rgb(41, 41, 41);
+  box-shadow: none;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.icone1 {
+  margin-top: 20%;
+  margin-left: 80%;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.icone2 {
+  margin-top: -12%;
+  margin-left: 80%;
 }
